--- a/Domaci03-Forma/css/style.css
+++ b/Domaci03-Forma/css/style.css
@@ -136,7 +136,7 @@ form input {
     border-radius: 4px;
     color: #fff;
 }
-button {
+.nextStepBtn {
     background-color: #fff;
     border: 1px solid #fff;
     color: #2f3981;
@@ -279,6 +279,24 @@ i.fa.fa-user-circle-o {
         margin: 2em 0;
         left: 5%;
     } 
+    
+}
+
+/* SMARTPHONES LANDSCAPE */
+@media only screen and (max-width: 780px) {
+    ul, .first-line:after, .second-line {
+        display: none;
+    }
+    .nextStepBtn {
+        margin-top: 160px;;
+    }
+    header {
+        left: 0%;
+    }
+    .box-2 {
+        margin: auto;
+    }
+    
     
 }
 
